added code comments to HTML files

--- a/C19V/templates/callambulance.html
+++ b/C19V/templates/callambulance.html
@@ -1,6 +1,6 @@
 {% load static %}
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+<!-- This is the page to show critical health status patients -->
 <div class="container">
     <img src="{% static '/images/amb1.jpg' %}" class="rounded" style="margin-left: 42%;" alt="Ambulance" width="180" height="180">
     <h2 style="text-align: center;"><b>EMERGENCY</b></h2><br>
