--- a/C19V/templates/main.html
+++ b/C19V/templates/main.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+<!-- This is a base page and the most of the pages extends from this page -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
