--- a/C19V/templates/showcentre.html
+++ b/C19V/templates/showcentre.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+<!-- This page is to show the details of Vaccination Centre -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="{% static '/css/patient_home.css'%}">
 
@@ -98,6 +98,7 @@
             <div class="col-sm-3">
               <h6 class="mb-0 pl-4">Total Vaccinations</h6>
             </div>
+                    <!-- The count shows its contribution part from the results in th statistics page -->
             <div class="col-sm-9 pl-4 text-secondary">
               {{count}}
             </div>
