--- a/C19V/templates/faq.html
+++ b/C19V/templates/faq.html
@@ -1,6 +1,6 @@
 {% extends 'main.html' %}
 {% load static %}
-
+<!-- This is a Frequently Asked Questions Page -->
 {% block content %}
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -22,6 +22,7 @@
         <div class="faq-answer" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
             <div itemprop="text">
                 {{faq.answer}}
+                    <!-- Update FAQ and Delete FAQ is shown only to User( Vaccination Centre ) -->
                 {% if User != 'Patient' %}
                 <button type="button" class="btn btn-outline-dark btn-sm" style="float:right;margin-top:1%;">
                     <a href="{% url 'update_faq' person.id faq.id %}" style="color:black;text-decoration: none;"><b>Update Faq &nbsp;<i class="fas fa-pencil-alt"></i></b></a>
@@ -35,6 +36,7 @@
                     <p style="font-weight: bold;">&nbsp;&nbsp; Are you sure you want to delete this FAQ?&nbsp;&nbsp;</p>
                     <p>&nbsp;&nbsp;&nbsp;{{faq.question}}</p>
                     <div>
+                        <!-- Form to Delete FAQ -->
                         <form action='' method='POST'>
                             {% csrf_token %}
                             <input type="submit" value='Delete' class="btn btn-dark btn-block"
@@ -58,6 +60,7 @@
 <div style="text-align: center;"><button type="button" class="btn btn-dark">
     <a href="{% url 'add_faq' person.id %}" style="color:white;text-decoration: none;"><b>Add Faq &nbsp;<i class="fas fa-plus"></i></b></a>
 </button></div>
+    <!-- Javascript to pop up the delete form -->
 <script>
     function openForm(n) {
         document.getElementsByClassName("myForm")[n-1].style.display = "block";
@@ -67,13 +70,13 @@
         document.getElementsByClassName("myForm")[n-1].style.display = "none";
     }
 </script>
+    <!-- Contact information is shown only to User(Vaccinated Person) -->
 {%  else  %}
 <div class="pl-4" style="text-align: center;margin-top:20%;">
 
     <h3> For any Further Information Contact- {{centre.name}} </h3><br>
  <div class="container">
-    <table class="table table-dark table-hover">
-    
+    <table class="table table-dark table-hover">    
         <tbody>
             <tr>
                 <td>Phone Number :</td>
@@ -88,11 +91,9 @@
     
         </tbody>
     </table>
- </div>
-    
+</div> 
+   
 </div>
-
-
 {% endif %}
 
 
