--- a/C19V/templates/navbar.html
+++ b/C19V/templates/navbar.html
@@ -1,4 +1,5 @@
 {% load static %}
+<!-- This is the Navbar for the Project -->
 <link rel="stylesheet" type="text/css" href="{% static '/css/navbar.css' %}">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -8,6 +9,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
+      <!-- The below contains the Navbar items for the Vaccinated Person User -->
       {% if block == 'Patient' %}
        
       <li class="nav-item {% if nbar == 'home' %}active{% endif %}">
@@ -22,7 +24,7 @@
       <li class="nav-item {% if nbar == 'faq' %}active{% endif %}">
         <a class="nav-link" href="{% url 'faq' person.id %}">FAQS </a>
       </li>
-
+      <!-- The below contains the Navbar items for the Vaccination Centre User -->
       {% else %}
 
       <li class="nav-item {% if nbar == 'dashboard' %}active{% endif %}">
@@ -40,12 +42,12 @@
       {% endif %}
     </ul>
   </div>
-
+  <!-- The below contains the Welcome message and logout for the Vaccinated Person User -->
   {% if block == 'Patient' %}
 
     <span class='text-white mx-3 '>Hi {{person.user.username}}</span>
     <span><a href="{% url 'logout'%}">Logout</a></span>
-  
+  <!-- The below contains the Welcome message and logout for the Vaccination Centre User -->
   {% else %}
 
   <span class='text-white mx-3'>{{person.user.username}}</span>
