--- a/C19V/templates/nearbyvc.html
+++ b/C19V/templates/nearbyvc.html
@@ -1,4 +1,5 @@
 {% load static %}
+<!-- This page is to check Nearby Vaccination Centres from the User's location-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,6 +19,7 @@
 
 <body style="background-color: black;">
     <h1 style="text-align: center;background-color:black;color:white;margin-top: 0.5%;margin-bottom: 0.5%;"><b>NearbyVaccination Centres</b></h1>
+        <!-- This is the custom django filter-form from django_filter -->
     <form action="" method="GET">
         <div class="search-container" style="text-align: center;margin-right: 35px;margin-bottom: 10px;">
         <label for="name"><strong class='text-white'>City:&nbsp</strong></label>
@@ -26,6 +28,7 @@
             <button class="btn btn-dark  btn-sm pd" type="search" style="margin-bottom: 5px;"><b>Search&nbsp<i class="fa fa-search"></i></b></button>
         </div>
     </form>
+        <!-- The below is the code to show the results of the search from above form -->
     <div id="scr" style="width:25%;height:690px;border-left:solid 8px;border-radius: 5px ;border-color:#666666;float:left;background-color: black;float:left; max-height: 50%;
     overflow-y: scroll;">
         <h1 style="text-align: center;background-color: black;color:aliceblue;border-top: solid 5px #666666;"><b>Vaccination Centres</b></h1>
@@ -72,8 +75,9 @@
         </div>
         {% endfor %}
     </div>
-    
+        <!-- Google Map -->
     <div id="googleMap" style="width:75%;height:690px;float:right;"></div>
+        <!-- Script for google map API -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRY_Rg4W_hjC8S-HcEFrHJuoOhneSm3oc&callback=myMap&libraries=&v=weekly" async defer></script>
  </body>
 </html>
