--- a/C19V/templates/registercentre.html
+++ b/C19V/templates/registercentre.html
@@ -1,14 +1,16 @@
 {% load static %}
-
+<!-- This page is to register or edit the details of the Vaccination Centre -->
 <link rel="stylesheet-+69" href='{% static "css/registercentre.css" %}'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <!-- Variable update stores the information whether to update or not -->
 {% if update %}
     <br><h2 style="text-align:center;">Edit Profile Details</h2><br><br>
 {% else %}
     <br><h2 style="text-align:center;">Register Your Vaccinated Centre</h2><br><br>
 {% endif %}
 <div class="container">
+        <!-- Patient Details Registration Form -->
     <form action="" method="POST">
         {% csrf_token %}
     <table class="table table-dark table-hover">
@@ -45,6 +47,7 @@
                 <td><label for="address">Address - &nbsp</label><div style="width:50%;margin-left: 15%;">{{ form.address }}</div></td>
             </tr>
             <tr style="display:none" >
+                    <!-- the model TestCentre links itself to User model. We choose to not show this to user to avoid exploitation/fraud -->
                 <td>
                     <label for="user"> User </label>
                     {{ form.user }}
