--- a/C19V/templates/vc_login.html
+++ b/C19V/templates/vc_login.html
@@ -1,4 +1,5 @@
 {% load static %}
+<!-- This is the login page for Vaccination Centre(User) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,6 +37,7 @@
       </div>
 
       <div class="login">
+        <!-- This is the form for Login -->
         <form role="form" method='POST' action='' >
           {% csrf_token %}
           <div class="form-group">
@@ -56,6 +58,7 @@
             Log In
           </button>
         </form>
+        <!-- This is to display error message while logging in -->
         {% for message in messages %}
         {{ message }}
         {% endfor %}
